<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="email_address" translatable="false">rakesh.xyzz@gmail.com</string>
    <string name="email_subject">Order for coffee</string>

    <!-- Layout strings -->
    <string name="name_hint">Name</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="order">ORDER</string>

    <!-- Email body -->
    <string name="email_name">Name : <xliff:g id="name" example="rakesh">%s</xliff:g></string>
    <string name="email_add_whipped_cream">Add whipped cream? </string>
    <string name="email_add_chocolate">Add chocolate? </string>
    <string name="email_quantity">Quantity: </string>
    <string name="email_total">Total: $</string>
    <string name="email_thank_you">Thank you!</string>

    <!-- Toast messages -->
    <string name="toast_more_than_100">You cannot order more than 100 cup of coffee.</string>
    <string name="toast_less_than_1">You cannot order less than 1 cup of coffee.</string>

</resources>
